--- a/index.html
+++ b/index.html
@@ -12,16 +12,52 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
-        <div class="half-width">
+    <section class="top-banner">
+        <div class="half-width ">
             <h1>Welcome To</h1>
             <h1><span class="name-highlight">Lazy</span> World</h1>
+            <br>
             <h3>A Lazy Student</h3>
             <p>A lazy student can be defined as a student who has the intellectual ability to excel but never realizes their potential because they choose not to do the work necessary to maximize their capability</p>
+            <a class="link-button" target="_blank" href="https://web.facebook.com/profile.php?id=100075724875663">ADVISE ME</a>
+        </div>
+        <div>
+            
         </div>
         <div class="half-width">
             <img src="images/Profile.png" alt="">
         </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/dream.png" alt="">
+        </div>
+        <div class="half-width text-box">
+            <h2>My Dream</h2>
+            <h3>Become a hardware engineer</h3>
+            <p>Computer hardware engineers work to make computers faster, more robust, and more cost-effective. They design the microprocessor chips that make your computer function, along with the equipment that makes computing easy and fun to do.</p>
+        </div>
+
+    </section>
+    <section class="experience-area">
+        <h2 id="end">Conclusion</h2>
+        <div id="experience" class="half-width conclusion">
+            <h2>EXPERIENCE </h2>
+            <h3 class="name-highlight">Direct observation of events as the basis of knowledge</h3>
+            <p>Candidates will often need to obtain several years of experience in hardware, network, PCB and/or computer system design before entering a hardware engineer role. Knowledge in the areas of EDA and PCB tools, scripting languages (Bash, MATLAB, Perl, PHP, Python), IT systems, product development and effective communication are also recommended.</p>
+        </div>
+        <div id="responsibilities" class="half-width conclusion">
+            <h2>RESPONSIBILITIES</h2>
+            <h3 class="name-highlight">Duty to do good and do no harm</h3>
+            <br>
+            <p>Design computer hardware and determine machine requirements.
+                Build and modify computer systems and hardware components.
+                Test and analyze computer hardware to gauge necessary functionality.
+                Maintain and update hardware to ensure compatibility with software needs.</p>
+        </div>
+    </section>
+    <footer>
+        <p> © Drk Noob, All Rights Reserved</p>
+    </footer>
 </body>
 </html>
