Updated my first ever website

--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
             <h1>Welcome To</h1>
             <h1><span class="name-highlight">Lazy</span> World</h1>
             <br>
-            <h3>A Lazy Student</h3>
-            <p>A lazy student can be defined as a student who has the intellectual ability to excel but never realizes their potential because they choose not to do the work necessary to maximize their capability</p>
+            <div class="top-box">
+                <h2>A Lazy Student</h2>
+                <p>A lazy student can be defined as a student who has the intellectual ability to excel but never realizes their potential because they choose not to do the work necessary to maximize their capability</p>
+            </div>
+            
+            <br>
             <a class="link-button" target="_blank" href="https://web.facebook.com/profile.php?id=100075724875663">ADVISE ME</a>
         </div>
         <div>
@@ -32,7 +36,7 @@
         <div class="half-width">
             <img src="images/dream.png" alt="">
         </div>
-        <div class="half-width text-box">
+        <div id="dream-box" class="half-width">
             <h2>My Dream</h2>
             <h3>Become a hardware engineer</h3>
             <p>Computer hardware engineers work to make computers faster, more robust, and more cost-effective. They design the microprocessor chips that make your computer function, along with the equipment that makes computing easy and fun to do.</p>
