Last update of my website

--- a/index.html
+++ b/index.html
@@ -51,13 +51,10 @@
             <p>Candidates will often need to obtain several years of experience in hardware, network, PCB and/or computer system design before entering a hardware engineer role. Knowledge in the areas of EDA and PCB tools, scripting languages (Bash, MATLAB, Perl, PHP, Python), IT systems, product development and effective communication are also recommended.</p>
         </div>
         <div id="responsibilities" class="half-width conclusion">
-            <h2>RESPONSIBILITIES</h2>
-            <h3 class="name-highlight">Duty to do good and do no harm</h3>
+            <h2>CAREER</h2>
+            <h3 class="name-highlight">Hardwere engineer career path</h3>
             <br>
-            <p>Design computer hardware and determine machine requirements.
-                Build and modify computer systems and hardware components.
-                Test and analyze computer hardware to gauge necessary functionality.
-                Maintain and update hardware to ensure compatibility with software needs.</p>
+            <p>Professionals may begin their career as an IT support specialist, IT technician or a similar role before becoming a hardware engineer. After gaining experience as a hardware engineer, professionals can progress into engineering specialty roles or into management and leadership positions like senior hardware engineer, hardware engineering project manager or director of hardware engineering.</p>
         </div>
     </section>
     <footer>
